Fix bug on mobile, add all the available transport modes.

--- a/src/wmnds/patterns/branded-banner/_branded-banner.scss
+++ b/src/wmnds/patterns/branded-banner/_branded-banner.scss
@@ -25,11 +25,13 @@
 
   &__modals {
     display: flex;
+    flex-wrap: wrap;
   }
 
   &__modal {
     display: flex;
     margin-right: 1.5rem; // 24px
+    margin-bottom: $size-sm; // 12px
     align-items: center;
   }
 
